<resources>
    <string name="app_name">Amy爱学习</string>
    <string name="copyright">©風中の語者.</string>
    <string name="okay_english">ok英语</string>
    <string name="umi_english">优咪瑞可</string>
    <string name="key_words">Key word cards</string>
    <string name="sup_words">Extra word cards</string>
    <string name="dict">生词本</string>
    <string name="score">成绩单</string>
    <string name="ok">确定</string>
    <string name="nick_name">昵称</string>
    <string name="nick_name_is_empty">昵称不能为空！</string>
    <string name="forget">忘记</string>
    <string name="know">认识</string>
    <string name="do_homework">做作业</string>
    <string name="workbook">作业本</string>
    <string name="word">单词</string>
    <string name="song">歌曲</string>
    <string name="story">故事</string>
    <string name="share">分享</string>
    <string name="save_to_dict">已保存至生词本</string>
    <string name="no_dict">没有任何不认识的单词</string>
    <string name="record">开始录音</string>
    <string name="stop">停止录音</string>
    <string name="homework">作业</string>
    <string name="no_file_found">无法找到该文件！</string>
    <string name="add_dict">添加生词本</string>
    <string name="add_dict_prompt">已添加至生词本！</string>
    <string name="add_workbook_prompt">已保存至作业本！</string>
    <string name="previous">上一个</string>
    <string name="next">下一个</string>
    <string name="recording_time_sample">录音中 00:01:12</string>
    <string name="recording">录音中</string>
    <string name="delete">删除</string>
</resources>
