<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sun.amy.activity.ReviewActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                tools:text="Unit 5 Zoo Animals"
                android:text="Unit 5 Zoo Animals"
                android:textSize="24sp"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:textColor="@color/steel_blue2"
                android:gravity="center_vertical|left"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="48dp" />

            <TextView
                android:id="@+id/tv_workbook"
                android:text="@string/workbook"
                android:textSize="18sp"
                android:textColor="@color/light_grey"
                android:gravity="center_vertical|right"
                android:layout_width="56dp"
                android:layout_height="48dp" />

        </LinearLayout>

        <FrameLayout
            android:background="@color/light_grey"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="288dp">

            <com.sun.amy.views.MediaView
                android:id="@+id/video_view"
                android:layout_width="match_parent"
                android:layout_height="288dp" />

            <com.sun.amy.views.WordView
                android:id="@+id/word_view"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="288dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="left|bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/ly_rec"
                    tools:visibility="visible"
                    android:visibility="invisible"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/ic_rec"
                        android:layout_marginLeft="2dp"
                        android:layout_gravity="center"
                        android:layout_width="12dp"
                        android:layout_height="12dp" />

                    <TextView
                        android:text="REC"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/red"
                        android:layout_margin="1dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_rec"
                        android:textSize="16sp"
                        android:text="@string/recording_time_sample"
                        android:textColor="@color/red"
                        android:layout_margin="2dp"
                        android:layout_gravity="center_vertical|right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <View
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            </LinearLayout>



        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_do_homework"
                android:onClick="onHomeworkClick"
                android:enabled="false"
                android:text="@string/record"
                android:textSize="24sp"
                android:textColor="@color/grey"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="76dp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>

